tests/test_assets/semantics/arrays/fail/out_of_bounds.cog
values: i32[3];

values[-1];

values[3];